# usage-pulse

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.codebase-memory/: artifact.json  graph.db.zst
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  provider_update.md
.github/workflows/: check-providers.yml  ci.yml
docs/: current-state.md  index.md
docs/official-docs/: ai-audit-sources-2026-06-21.md
providers/: VERSION_PINS.json
scripts/: check-provider-updates.sh  install-claude-hook.sh  install-skill.sh  install-tmux.sh  verify.sh
skills/model-advisor/: SKILL.md
src/usage_pulse/: __init__.py  _refresh_worker.py  audit.py  cli.py  handshake.py  io.py
src/usage_pulse/analysis/: __init__.py  advisor.py  roi.py
src/usage_pulse/display/: __init__.py  notify.py  tmux.py  tray.py
src/usage_pulse/providers/: __init__.py  base.py  ccusage.py  codexbar.py
tests/: test_advisor.py  test_audit.py  test_ccusage.py  test_cli.py  test_codexbar.py  test_handshake.py  test_io.py  test_roi.py
